--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Conoce tu moto ideal, enterate de las cuirosidades del mundo de las dos ruedas, cuenta con información actual y más">
+    <meta name="keywords" content="Motos, Motoviajeros, Concejos, Requisitos, Transito">
     <!--Libreria Font awesome Inicia-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Libreria Font Awasone Fin-->
+    <!--Libreria wow.js Animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Fin animaciones-->
     <!--BS 5.1 Inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -17,7 +23,7 @@
     <link rel="stylesheet" href="./estilos/estilos.css">
     <title>InfoMotoblog 🏍</title>
 </head>
-<!--Pagina responsiva-->
+
 <body>
     <header>
         <!--navbar Inicia-->
@@ -54,35 +60,32 @@
     <main>
         <!--jumbotron inicia-->
         <div class="p-5 rounded jumbotron">
-            <div class="call">
-                <h1>Tu mejor opcion</h1>
+            <div class="call" data-aos="fade-down-right">
+                <h3>Tu mejor opcion</h3>
                 <p>Conoce tu mejor opcion de moto por tu estatura y peso.</p>
-                <a href="#curiosidades">Ver mas</a>
+                <a href="#">Ver mas</a>
             </div>
         </div>
         <!--jumbotron fin-->
     </main>
-    <h2 class="text-center text-white">Curiosidades 🚦</h2>
-    <section class="container-fluid curiosidades" id="curiosidades" >
+    <h1 class="text-white text-center" data-aos="zoom-in-up">Curiosidades 🚦</h1>
+    <section class="container-fluid curiosidades text-white" id="curiosidades">
         <div class="row">
-            <article class="col-sm-4 col-md-6">
-                <h3 class="text-center">La primera motocicleta</h3>
+            <div class="col-sm-4 col-md-6 text-center" data-aos="fade-right">
+                <h2 class="text-center text-white">La primera motocicleta</h2>
                 <img class="img-fluid rounded" src="./img/quien-invento-la-moto.jpg" alt="Primera moto">
-                <h4>¿QUIÉN INVENTÓ LA PRIMERA MOTO?¿CUÁNDO SE CREO?</h4>
+                <h5><a href="#">¿Quien invento la primera motocicleta?</a></h5>
                 <p>Para ver la primera motocicleta de la historia hay que remontarse hasta el año 1867, cuando el
                     estadounidense Sylvester Howard Roper creó un motor de vapor con dos pistones de 164cc cada uno, que
                     era accionado por carbón. Lo hizo en la ciudad de Springfield en plena guerra civil norteamericana.
                 </p>
                 <p>Howard Roper falleció en el año 1886 mientras conducía su motocicleta a 64 km/h, tratando de romper
                     el récord de velocidad sobre una motocicleta a vapor.</p>
-                <p>Este modelo está considerado como la primera motocicleta de la historia, aunque hay mucha gente que
-                    asegura que realmente fue 18 años más tarde cuando se creó la moto como tal, ya que hay que recordar
-                    que la de Howard Roper era una moto a vapor, más cerca de la bici que de la propia motocicleta.</p>
-            </article>
-            <article class="col-sm-4 col-md-6">
-                <h3 class="text-center">Tecnicas de manejo</h3>
+            </div>
+            <div class="col-sm-4 col-md-6 text-center" data-aos="fade-left">
+                <h2 class="text-center text-white">Tecnicas de manejo</h2>
                 <img class="img-fluid rounded" src="./img/lorenzo-833726_1280.jpg" alt="Moto gp">
-                <h4>Control del campo de visión al conducir una moto</h4>
+                <h5><a href="#">Control del campo de vision al conducir</a></h5>
                 <p>Cuando se conduce una moto es indispensable desarrollar la visión periférica. Los seres humanos
                     tenemos un campo de visión de 180º; sin embargo, durante la actividad de la conducción, así como en
                     momentos de ansiedad, nuestra atención se concentra en un punto muy concreto. A este fenómeno se lo
@@ -90,9 +93,9 @@
                 <p>La vulnerabilidad de los motociclistas hace indispensable que éstos sean capaces de tener un control
                     global de lo que está pasando a su alrededor, debido a que, en caso de tener un accidente, las
                     probabilidades de sufrir graves lesiones son muy elevadas.</p>
-            </article>
-            <article class="col-sm-4 col-md-6">
-                <h3 class="text-center">Requisitos para circular</h3>
+            </div>
+            <div class="col-sm-4 col-md-6 text-center" data-aos="fade-right">
+                <h2 class="text-center text-white">Requisitos para circular</h2>
                 <select class="form-select" aria-label="Default select example">
                     <option selected>Seleciona el pais</option>
                     <option value="1">Argentina</option>
@@ -104,19 +107,19 @@
                 </select>
                 <img class="img-fluid rounded" src="./img/DpV01E_D3_720x0__1.jpg" alt="Transito">
                 <p>En Buenos Aires Argentina Capital Federal los agentes de transito tienen muchas Responsabilidades
-                    para mejorar la circulacion y hac>er cumplir correctamente las normas.</p>
+                    para mejorar la circulacion y hacer cumplir correctamente las normas.</p>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
+                        <h4 class="accordion-header text-center text-white" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseOne" aria-expanded="false"
                                 aria-controls="flush-collapseOne">
                                 Responsabilidades del agente de transito.
                             </button>
-                        </h2>
+                        </h4>
                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">
+                            <div class="accordion-body text-black">
                                 <ul>
                                     <li>
                                         Representar, gestionar y capacitar al cuerpo de agentes del control de tránsito
@@ -145,29 +148,33 @@
                                 </ul>
                             </div>
                         </div>
-            </article>
-            <article class="col-sm-4 col-md-6">
-                <h3 class="text-center">Motoviajeros</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-6 text-center" data-aos="fade-left">
+                <h2 class="text-center text-white">Motoviajeros</h2>
                 <img class="img-fluid rounded" src="./img/Home_quien_soy_800x.webp" alt="Motoviajero Charly">
+                <h5><a href="#">Viajes</a></h5>
                 <p>El mototurismo o motoaventura es un formato de turismo que reúne la aventura, destreza y la
                     convivencia, dentro de un marco de desafío personal, con la libertad y la diversidad lleva a una
                     persona a lo largo de las rutas que son menos tráfico con destino que llevan a las puertas de los
                     castillos, a las orillas de los lagos, a la entrada de los bosques o en los pies de los picos más
                     hermosos con la filosofía y la cultura de la motocicleta.</p>
-                <a href="#">Saber mas</a>
-            </article>
-            <article class="col-sm-4 col-md-6">
-                <h3 class="text-center">Top 5 de las mejores motos de trabajo</h3>
+            </div>
+            <div class="col-sm-4 col-md-6 text-center" data-aos="fade-up">
+                <h2 class="text-center text-white">Top 5 de las mejores motos de trabajo</h2>
                 <img class="img-fluid rounded" src="./img/bajaj-boxer-150.jpg" alt="Bajaj boxer 150">
+                <h5><a href="#">Ver</a></h5>
                 <p>Conoce las 5 mejores motos de trabajo y las mas recomendadas en este 2024</p>
-                <a href="#">Saber mas</a>
-            </article>
-            <article class="col-sm-4 col-md-6">
-                <h3 class="text-center">Concejos</h3>
+            </div>
+            <div class="col-sm-4 col-md-6 text-center" data-aos="fade-up">
+                <h2 class="text-center text-white">Concejos</h2>
                 <img class="img-fluid rounded"
                     src="./img/mujer-poniendose-casco-viaje-carretera-motocicleta_23-2149023868.avif"
                     alt="Mujer ajustando su casco">
-            </article>
+                <h5><a href="#">Tips</a></h5>
+                <p>Concejos para sacarle todo el provecho a tu moto y tener la mayor seguridad.</p>
+            </div>
         </div>
     </section>
     <footer>
@@ -187,12 +194,19 @@
             </a>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
