--- a/pages/equipamento.html
+++ b/pages/equipamento.html
@@ -4,20 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="No hay nada mejor para un motero que darle gustos a su moto, aca te podras enterar de todo el equipamento que le puedes colocar a tu moto y mucho mas">
+    <meta name="keywords"
+        content="Motos, Alforjas, Defensas, Parabrisas, Porta celulares, Porta alforjas, Cubre puños, Luces exploradoras">
     <!--Libreria Font awesome Inicia-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Libreria Font Awasone Fin-->
+    <!--Libreria wow.js Animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Fin animaciones-->
     <!--BS 5.1 Inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS 5.1 Fin-->
     <link rel="shortcut icon" href="./multimedia/engine-3179429_1280.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>InfoMotoblog 🏍</title>
+    <title>Equipamento 💼</title>
 </head>
-<!--Esta pagina no responsive-->
+
 <body>
     <header>
         <!--navbar Inicia-->
@@ -50,16 +57,16 @@
     </header>
     <main>
         <video src="../video/bike_-_113321 (540p).mp4" loop autoplay></video>
-        <h2 class="text-center text-white">Equipamento</h2>
+        <h2 class="text-center text-white" data-aos="fade-right">Equipamento</h2>
         <div class="galeria">
-            <div class="item" id="img1"></div>
-            <div class="item" id="img2"></div>
-            <div class="item" id="img3"></div>
-            <div class="item" id="img4"></div>
-            <div class="item" id="img5"></div>
-            <div class="item" id="img6"></div>
-            <div class="item" id="img7"></div>
-            <div class="item" id="img8"></div>
+            <div class="item" id="img1">Alforjas</div>
+            <div class="item" id="img2">Tampax</div>
+            <div class="item" id="img3">Cubre Puños</div>
+            <div class="item text-white" id="img4">Luces exploradoras</div>
+            <div class="item" id="img5">Defensas</div>
+            <div class="item" id="img6">Parabrisas</div>
+            <div class="item" id="img7">Porta Celular</div>
+            <div class="item" id="img8">Porta Alforjas</div>
         </div>
     </main>
     <footer>
@@ -79,6 +86,11 @@
             </a>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
