--- a/pages/fichastecnicas.html
+++ b/pages/fichastecnicas.html
@@ -4,20 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Lo mas importante de una moto es su ficha tecnica, sus caracteristicas y desempeño que la diferencian al resto. Conocer la ficha tecnica de tu moto te ayudara a conocer sus capacidades y limites">
+    <meta name="keywords" content="Motos, fichas tecnicas, Marcas, Opiniones, Review">
     <!--Libreria Font awesome Inicia-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Libreria Font Awasone Fin-->
+    <!--Libreria wow.js Animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Fin animaciones-->
     <!--BS 5.1 Inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS 5.1 Fin-->
     <link rel="shortcut icon" href="./multimedia/engine-3179429_1280.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>InfoMotoblog 🏍</title>
+    <title>Fichas tecnicas 📝</title>
 </head>
-<!--Esta pagina no responsive-->
+
 <body>
     <header>
         <!--navbar Inicia-->
@@ -49,7 +55,7 @@
         <!--nabvar fin-->
     </header>
     <main>
-        <div class="container">
+        <div class="container" data-aos="zoom-in-up">
             <iframe width="600" height="350" src="https://www.youtube.com/embed/BUMUtw-54A8?si=NzwriX6WggLZtDGr"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -104,7 +110,7 @@
         </div>
         </nav>
     </main>
-    <h2 class="text-center text-white">Fichas tecnicas por marcas</h2>
+    <h2 class="text-center text-white" data-aos="fade-right">Fichas tecnicas por marcas</h2>
     <div class="galeria">
         <div class="item" id="logo1"></div>
         <div class="item" id="logo2"></div>
@@ -115,18 +121,20 @@
         <div class="item" id="logo7"></div>
         <div class="item" id="logo8"></div>
     </div>
-    <h2 class="text-center text-white">Opiniones</h2>
-    <div class="form-floating">
+    <h2 class="text-center text-white" data-aos="fade-right">Opiniones</h2>
+    <div class="form-floating" data-aos="fade-right">
         <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
             style="height: 100px"></textarea>
         <label for="floatingTextarea2">Descripcion a favor de la moto 👍</label>
     </div>
-    <div class="form-floating">
+    <div class="form-floating" data-aos="fade-right">
         <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
             style="height: 100px"></textarea>
         <label for="floatingTextarea2">Descripcion en contra de la moto 👎</label>
     </div>
-
+    <div class="boton" data-aos="fade-up">
+        <button type="button" class="btn btn-primary">Enviar</button>
+    </div>
     </main>
     <footer>
         <p>Todos los derechos reservados por copyright</p>
@@ -145,6 +153,10 @@
             </a>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
