--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -4,20 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Lo mas importante a la hora de manejar una moto es la seguridad y aca vas a poder conseguir lo ultimo en indumentaria para cualquier segmento de moto">
+    <meta name="keywords" content="Motos, Indumentaria, Cascos, Guantes, Botas, Antiparras, Camperas">
     <!--Libreria Font awesome Inicia-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Libreria Font Awasone Fin-->
+    <!--Libreria wow.js Animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Fin animaciones-->
     <!--BS 5.1 Inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS 5.1 Fin-->
     <link rel="shortcut icon" href="./multimedia/engine-3179429_1280.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>InfoMotoblog 🏍</title>
+    <title>Indumentaria 🧤</title>
 </head>
-<!--Pagina responsiva-->
+
 <body>
     <header>
         <!--navbar Inicia-->
@@ -60,13 +66,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/dainese_apertura.jpg" class="d-block w-100" alt="Motero con equipamento" width="1000" height="630">
+                    <img src="../img/dainese_apertura.jpg" class="d-block w-100" alt="Motero con equipamento"
+                        width="100%" height="500">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/ropa-moto.jpg" class="d-block w-100" alt="Hombre en moto con casco clasico" width="1000" height="630">
+                    <img src="../img/ropa-moto.jpg" class="d-block w-100" alt="Hombre en moto con casco clasico"
+                        width="100%" height="500">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/img_c_629f430e2a5e8.jpg" class="d-block w-100" alt="Moto cross" width="1000" height="630">
+                    <img src="../img/img_c_629f430e2a5e8.jpg" class="d-block w-100" alt="Moto cross" width="100%"
+                        height="500">
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                     data-bs-slide="prev">
@@ -80,16 +89,16 @@
                 </button>
             </div>
         </div>
-        <h2 class="text-center text-white">Conoce la indumentaria para cada segmento</h2>
+        <h2 class="text-center text-white" data-aos="fade-right">Conoce la indumentaria para cada segmento</h2>
         <div class="galeria">
-            <div class="item item1"></div>
-            <div class="item item2"></div>
-            <div class="item item3"></div>
-            <div class="item item4"></div>
-            <div class="item item5"></div>
-            <div class="item item6"></div>
-            <div class="item item7"></div>
-            <div class="item item8"></div>
+            <div class="item item1 text-white text-center">Motoviajeros</div>
+            <div class="item item2 text-white text-center">Interurbano</div>
+            <div class="item item3 text-white text-center">Motocross</div>
+            <div class="item item4 text-white text-center">Camperas</div>
+            <div class="item item5 text-white text-center">Botas</div>
+            <div class="item item6 text-center">Guantes</div>
+            <div class="item item7 text-center">Cascos</div>
+            <div class="item item8 text-center">Antiparras</div>
         </div>
     </main>
     <footer>
@@ -109,6 +118,10 @@
             </a>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
