--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,20 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Enterate de los nuevos lanzamientos de motos en este año y conoce a detalle cada caracteristica de las mismas. Conoce las noticias mas recientes en el mundo motero">
+    <meta name="keywords" content="Motos, Noticias, Lanzamientos, características">
     <!--Libreria Font awesome Inicia-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Libreria Font Awasone Fin-->
+    <!--Libreria wow.js Animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--Fin animaciones-->
     <!--BS 5.1 Inicia-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS 5.1 Fin-->
     <link rel="shortcut icon" href="./multimedia/engine-3179429_1280.png" type="image/x-icon">
     <link rel="stylesheet" href="../estilos/estilos.css">
-    <title>InfoMotoblog 🏍</title>
+    <title>Noticias 🌎</title>
 </head>
-<!--Esta pagina no responsive-->
+
 <body>
     <header>
         <!--navbar Inicia-->
@@ -52,13 +58,16 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/Noticias1.jpg.jpg" class="d-block w-100" alt="Salon de la moto" width="1000" height="630">
+                    <img src="../img/Noticias1.jpg.jpg" class="d-block w-100" alt="Salon de la moto" width="100%"
+                        height="500">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Noticias 2.jpg.jpg" class="d-block w-100" alt="Salon de la moto" width="1000" height="630">
+                    <img src="../img/Noticias 2.jpg.jpg" class="d-block w-100" alt="Salon de la moto" width="100%"
+                        height="500">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Noticias3.jpg.jpg" class="d-block w-100" alt="Conferencia" width="1000" height="630">
+                    <img src="../img/Noticias3.jpg.jpg" class="d-block w-100" alt="Conferencia" width="100%"
+                        height="500">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -73,37 +82,29 @@
             </button>
         </div>
     </main>
-    <h2 class="text-center text-white">Lo mas reciente 📆</h2>
+    <h1 class="text-center text-white" data-aos="zoom-in-up">Lo mas reciente 📆</h1>
     <section class="container-fluid text-center noticias">
-        <div class="row">
-            <article>
-                <h3 class="text-center">LA NUEVA YAMAHA FZ-X YA ESTÁ A LA VENTA: PRECIO Y CARACTERÍSTICAS</h3>
+        <div class="row text-white text-center">
+            <div class="col-sm-4 col-md-6" data-aos="fade-down">
+                <h2 class="text-center">La nueva Yamaha Fz-x</h2>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 1.jpg.jpg" alt="yamaha FZ-X">
                 <p>La nueva Yamaha FZ-X llega para ampliar la propuesta de la marca en la categoría street. Este modelo
                     cuenta con excelentes prestaciones y un completo equipamiento que en conjunto con un diseño
                     distintivo estilo neo-retro, le otorgan características destacadas dentro de su segmento.</p>
                 <p>Esta motocicleta expande la propuesta de la familia FZ, pero mantiene su esencia ya que comparte la
                     plataforma del motor de 149 cc, alimentado por inyección electrónica y tecnología Blue Core.</p>
-                <img class="img-fluid rounded" src="../img/Noticias articulo 1,2.jpg.jpg" alt="yamaha FZ-X">
-                <p>La nueva Yamaha FZ-X está pensada para conductores que buscan un óptimo nivel de equipamiento, por
-                    eso cuenta con sistema de freno ABS, que proporciona una mayor optimización en el frenado y control
-                    de tracción TCS, que garantiza un mayor control y estabilidad en la conducción. También cuenta con
-                    disco de freno delantero y trasero los cuales proveen una excelente capacidad de frenado.</p>
-            </article>
-            <article>
-                <h3 class="text-center">LLEGÓ LA HONDA NAVI, PRECIO Y CARACTERÍSTICAS DE LA NUEVA SUPER VENTAS</h3>
+            </div>
+            <div class="col-sm-4 col-md-6" data-aos="fade-down">
+                <h2 class="text-center">Llego la nueva Honda Navi a Argentina</h2>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 2.jpg.jpg" alt="Honda navi">
                 <p>Honda Motor de Argentina continúa con su compromiso de sumar opciones para los seguidores de la marca
                     y ofrecer productos siguiendo las tendencias del mercado con la última tecnología y calidad. Así se
                     presenta la Honda NAVi, un producto distintivo dentro del line-up de la marca que crea un nuevo
                     segmento ya que toma características de scooter y CUB, que se destaca por un estilo propio y
                     autonomía, diseño, practicidad y customización.</p>
-                <p>La nueva Honda NAVi posee un motor de 109 centímetros cúbicos, 4 tiempos, 2 válvulas, monocilíndrico,
-                    OHC y refrigerado por aire que se caracteriza por su bajo costo de mantenimiento, confiabilidad y su
-                    excelente consumo. La transmisión es automática.</p>
-            </article>
-            <article>
-                <h3 class="text-center">Este 2024 llega la Aprilia RS 457</h3>
+            </div>
+            <div class="col-sm-4 col-md-6" data-aos="fade-right">
+                <h2 class="text-center">Este 2024 llega la Aprilia RS 457</h2>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 3.jpg.jpg" alt="Aprilia RS 457">
                 <p>Aprilia ha querido incluir en su catálogo una deportiva destinada a usuarios del carnet A2 y que
                     destaca por su relación peso-potencia, ya que tiene un peso de 175 kg en orden de marcha y ofrece
@@ -112,9 +113,9 @@
                 <p>Además, cuenta con acelerador electrónico, tres modos de conducción y control de tracción ajustable y
                     desconectable. El ABS de la rueda trasera también puede desconectarse según el modo de conducción
                     que se elija. Aún no conocemos el precio de esta nueva Aprilia RS 457.</p>
-            </article>
-            <article>
-                <h3 class="text-center">Este 2024 lega la Kawasaki Ninja 500</h3>
+            </div>
+            <div class="col-sm-4 col-md-6" data-aos="fade-left">
+                <h2 class="text-center">Este 2024 lega la Kawasaki Ninja 500</h2>
                 <img class="img-fluid rounded" src="../img/Noticias articulo kawa 3.jpg (2).webp"
                     alt="Kawasaki Ninja 500">
                 <p>Kawasaki también ha querido captar a usuarios del A2 con el lanzamiento de una nueva generación Ninja
@@ -129,11 +130,9 @@
                     control de tracción. Los cambios de la Ninja 500 2024 los encontramos en los frenos: los discos ya
                     no son lobulados pero sí que mantienen las medidas, 310 mm los delanteros con pinza axial de doble
                     pistón y 220 mm detrás con pinza de un único pistón.</p>
-                <a href="#">Saber mas</a>
-            </article>
-            <article>
-                <h3 class="text-center">LA CFMOTO NK MÁS ACCESIBLE HASTA HOY: EICMA VERÁ NACER A LA NAKED CHINA MÁS
-                    PEQUEÑA, PERO PODEROSA</h3>
+            </div>
+            <div class="col-sm-4 col-md-6" data-aos="fade-up">
+                <h2 class="text-center">La cf moto mas esperada y accesible a llegado</h2>
                 <p>El Salón EICMA de Milán 2023 está literalmente a la vuelta de la esquina y marcas como CFMoto ya
                     tienen listas sus novedades de cara a la próxima temporada. Entre esos planes, que incluyen motos en
                     gamas MT y NK, se encuentra la nueva 125 NK con imagen heredada de sus hermanas mayores. </p>
@@ -146,43 +145,44 @@
                     popularidad creciente y cuenta con una amplia gama de opciones entre las que marcas como KTM (125 y
                     250 Duke) dominan. En este caso, CFMoto quiere pisar fuerte en esta rama del mercado con esta nueva
                     125.</p>
-                <p>Para impulsar a esta nueva 125 NK, CFMoto podría estrenar un nuevo motor. Actualmente en la gama de
-                    la firma se encuentra la Papio, que utiliza un bloque de 125cc refrigerado por aire que no alcanza
-                    para competir con las reinas del segmento naked. Para eso, el nuevo 125 de CFMoto sería alimentado
-                    por inyección electrónica y refrigerado por líquido, capaz de rendir unos interesantes 15 CV.</p>
-                <a class="" href="#">Saber mas</a>
-            </article>
-            <article>
-                <h3 class="text-center">Royald Enfield Super Meteor 650</h3>
+            </div>
+            <div class="col-sm-4 col-md-6" data-aos="fade-up">
+                <h2 class="text-center">Royald Enfield Super Meteor 650</h2>
                 <img class="img-fluid rounded" src="../img/Noticias articulo 4.1.jpg.jpg"
                     alt="Royale enfield Super Meteor 650">
                 <p>Llego el nuevo modelo custom Cruiser de Royald Enfield a la Argentina. Un moedelo pensado y diseñado
                     para salir a la ruta y disfrutar del sonido y andar de su motor 650</p>
-                <img class="img-fluid rounded" src="../img/Noticias articulo 4.jpg.jpg"
-                    alt="Royale enfield Super Meteor 650">
+                <div data-aos="fade-up">
+                    <img class="img-fluid rounded" src="../img/Noticias articulo 4.jpg.jpg"
+                        alt="Royale enfield Super Meteor 650">
+                </div>
                 <p>Cuenta con un motor bicilindrico en paralelo de 648cc de 47ps y 52.3Nm de par que ofrece transiciones
                     de marcha perfecta, una fuerte aceleracion de gama baja y una respuesta del acelerador sin esfuerzo
                 </p>
-            </article>
+            </div>
         </div>
     </section>
     <footer>
         <p>Todos los derechos reservados por copyright</p>
         <div class="redes">
-            <a href="">
+            <a href="#">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="">
+            <a href="#">
                 <i class="fa-brands fa-youtube"></i>
             </a>
-            <a href="">
+            <a href="#">
                 <i class="fa-brands fa-twitter"></i>
             </a>
-            <a href="">
+            <a href="#">
                 <i class="fa-solid fa-location-dot"></i>
             </a>
-        </div>  
+        </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
